--- a/judge/templates/problem_detail.html
+++ b/judge/templates/problem_detail.html
@@ -33,6 +33,7 @@
         <select name="language" id="language" class="form-select w-auto d-inline-block ms-2" required>
           <option value="python">Python</option>
           <option value="cpp">C++</option>
+          <option value="C">C</option>
         </select>
       </div>
 
